--- a/1. Sejarah.md
+++ b/1. Sejarah.md
@@ -1,3 +1,101 @@
+# 📚 Sejarah Bahasa Pemrograman
+
+Bahasa pemrograman adalah instruksi yang ditulis manusia agar komputer dapat mengolah data dan menjalankan tugas tertentu. Perkembangannya dibagi dalam beberapa generasi, mulai dari kode mesin hingga bahasa modern.
+
+---
+
+## 1. Generasi Pertama (1940-an): Machine Language
+- Bahasa pemrograman paling dasar, menggunakan **kode biner (0 dan 1)**.
+- Contoh: `10110000 01100001`
+- **Kelebihan:** Langsung dieksekusi mesin, sangat cepat.
+- **Kekurangan:** Sulit dipahami manusia, rawan error, tidak portabel.
+
+---
+
+## 2. Generasi Kedua (1950-an): Assembly Language
+- Menggunakan **mnemonik** (kode singkat) untuk menggantikan biner.
+- Contoh:
+  ```asm
+  MOV AX, 1
+  ADD AX, 2
+
+* **Kelebihan:** Lebih mudah dipahami daripada biner, kontrol penuh atas hardware.
+* **Kekurangan:** Tetap rumit, khusus untuk satu jenis prosesor (tidak portable).
+
+---
+
+## 3. Generasi Ketiga (1950-an - 1970-an): High-Level Language
+
+* Bahasa tingkat tinggi dengan sintaks mirip bahasa manusia.
+* Contoh:
+
+  * **FORTRAN (1957):** Untuk sains dan perhitungan numerik.
+  * **COBOL (1959):** Untuk bisnis, laporan, dan manajemen data.
+  * **BASIC (1964):** Untuk pendidikan, mudah dipelajari pemula.
+  * **C (1972):** Bahasa sistem, dasar dari banyak bahasa modern.
+* **Kelebihan:** Lebih mudah dipelajari, portable antar mesin.
+* **Kekurangan:** Perlu compiler/interpreter.
+
+---
+
+## 4. Generasi Keempat (1980-an): 4GL & OOP
+
+* Fokus pada **Object-Oriented Programming (OOP)** dan query database.
+* Contoh:
+
+  * **C++ (1983):** Ekstensi dari C dengan konsep OOP.
+  * **SQL (1978/1986 standar):** Untuk mengakses database.
+  * **Python (1991):** Sederhana, fleksibel, powerful.
+  * **Java (1995):** *Write Once, Run Anywhere* dengan JVM.
+* **Kelebihan:** Lebih dekat ke bahasa manusia, mendukung pengembangan software besar.
+* **Kekurangan:** Kadang lebih lambat dari bahasa low-level.
+
+---
+
+## 5. Generasi Kelima (2000-an - Sekarang): Modern & Declarative
+
+* Fokus pada **AI, web, mobile, big data, dan otomatisasi.**
+* Contoh:
+
+  * **JavaScript:** Web interaktif (front-end & back-end dengan Node.js).
+  * **PHP:** Web server-side.
+  * **Ruby:** Web framework (Rails).
+  * **Go (2009):** Ringan, cepat, cocok untuk cloud.
+  * **Kotlin (2011):** Resmi untuk Android (pengganti Java).
+  * **Rust (2015):** Fokus keamanan & performa.
+* **Kelebihan:** Mendukung multi-platform, cloud, AI, big data.
+* **Kekurangan:** Banyak pilihan, membuat developer harus selektif.
+
+---
+
+## 6. Timeline Singkat Bahasa Pemrograman
+
+| Tahun | Bahasa       | Fungsi Utama                      |
+| ----- | ------------ | --------------------------------- |
+| 1940  | Machine Code | Instruksi biner langsung          |
+| 1950  | Assembly     | Instruksi simbolik untuk hardware |
+| 1957  | FORTRAN      | Sains & numerik                   |
+| 1959  | COBOL        | Bisnis & laporan                  |
+| 1964  | BASIC        | Edukasi & pemula                  |
+| 1972  | C            | Sistem operasi & general-purpose  |
+| 1983  | C++          | OOP & software besar              |
+| 1991  | Python       | General-purpose, AI, scripting    |
+| 1995  | Java         | Cross-platform, enterprise        |
+| 1995  | JavaScript   | Web interaktif                    |
+| 2009  | Go           | Cloud & server                    |
+| 2011  | Kotlin       | Android development               |
+| 2015  | Rust         | Sistem, keamanan memori           |
+
+---
+
+## 7. Kesimpulan
+
+* Bahasa pemrograman berkembang dari **biner → assembly → high-level → modern.**
+* Setiap generasi bertujuan **mempermudah manusia berkomunikasi dengan komputer**.
+* Kini, tren menuju **bahasa yang aman, cepat, portable, dan mendukung AI & cloud computing**.
+
+---
+
 # Materi Lengkap: Sejarah Perkembangan Bahasa Java
 
 ## Daftar Isi
@@ -213,7 +311,76 @@ Fitur-fitur revolusioner yang diperkenalkan:
 | Java SE 11 | 2018 | | LTS Pertama Oracle, `var`, HTTP Client |
 | Java SE 17 | 2021 | | LTS Terbaru, `sealed` classes, Peningkatan keamanan & performa |
 
-### 8. Kesimpulan: Mengapa Java Masih Relevan?
+---
+
+## 8. IDE untuk Pengembangan Java
+
+### 🔹 NetBeans
+- **Kelebihan:**
+  - Terintegrasi langsung dengan JDK.
+  - Mendukung Java EE (Servlet, JSP).
+  - Open-source, gratis.
+- **Kekurangan:**
+  - Lebih lambat dibanding IntelliJ.
+  - Plugin relatif terbatas.
+
+---
+
+### 🔹 Eclipse
+- **Kelebihan:**
+  - Gratis, open-source, banyak plugin.
+  - Cocok untuk project enterprise skala besar.
+  - Mendukung banyak bahasa lain.
+- **Kekurangan:**
+  - UI rumit untuk pemula.
+  - Konsumsi memori besar, kadang lambat.
+
+---
+
+### 🔹 IntelliJ IDEA
+- **Kelebihan:**
+  - Smart code completion & refactoring terbaik.
+  - UI modern, performa cepat.
+  - Integrasi kuat dengan framework populer (Spring, Hibernate, Maven).
+- **Kekurangan:**
+  - Versi lengkap (Ultimate) berbayar.
+  - Agak berat di laptop spek rendah.
+
+---
+
+### 🔹 BlueJ
+- **Kelebihan:**
+  - Ringan, sederhana.
+  - Visualisasi OOP jelas → cocok untuk belajar.
+- **Kekurangan:**
+  - Tidak cocok untuk project besar.
+  - Fitur sangat terbatas.
+
+---
+
+### 🔹 JCreator
+- **Kelebihan:**
+  - Ringan, cepat, UI sederhana.
+  - Mirip Visual Studio, mudah dipahami pemula.
+- **Kekurangan:**
+  - Tidak open-source, lisensi berbayar.
+  - Kurang update, fitur kalah jauh dari IDE modern.
+
+---
+
+## 3. Tabel Ringkasan IDE
+
+| IDE         | Kelebihan | Kekurangan |
+|-------------|-----------|------------|
+| **NetBeans** | Terintegrasi JDK, gratis, Java EE support | Lebih lambat, plugin terbatas |
+| **Eclipse**  | Gratis, banyak plugin, enterprise friendly | UI rumit, berat di RAM |
+| **IntelliJ** | Refactoring kuat, modern, cepat | Ultimate berbayar, berat di PC lemah |
+| **BlueJ**    | Ringan, cocok pemula | Fitur terbatas, tidak cocok project besar |
+| **JCreator** | Ringan, mirip Visual Studio | Berbayar, tidak update |
+
+---
+
+### 9. Kesimpulan: Mengapa Java Masih Relevan?
 
 Meski sudah berusia lebih dari 25 tahun, Java tetap menjadi salah satu bahasa pemrograman paling populer di dunia karena:
 
